# Otus_hw8

./: CMakeLists.txt  README.md  bayan.cpp
.github/workflows/: release.yml
include/: search.h
test/tt/: search _.h
test/tt1/tt/: _.ninja_log  hash.h
